# OpenCV_dev

./: .gitignore  CMakeLists.txt  README.md  conversion.cpp  cropAndResize.cpp  readWriteDisplay.cpp  rotate.cpp
